checkout機能の実装

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,12 @@ services:
       - bundle:/usr/local/bundle
       - node_modules:/myapp/node_modules
     tty: true
+  smtp:
+    image: schickling/mailcatcher
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+      
 volumes:
   db:
   bundle:
