--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   db:
     image: postgres:14-alpine
@@ -19,7 +19,8 @@ services:
     environment:
       - BASIC_AUTH_USER=admin
       - BASIC_AUTH_PASSWORD=password
-    
+      - EDITOR=vim
+
     stdin_open: true
     tty: true
 
@@ -46,7 +47,7 @@ services:
     ports:
       - "1080:1080"
       - "1025:1025"
-      
+
 volumes:
   db:
   bundle:
